New feature: Add feature register and forgot password.
